testsuite/gnatprove/tests/1229__lim_constrained_uu/test.out
test.adb:14:18: error: attribute "Constrained" on unchecked union prefix is not yet supported
test.adb:23:04: error: discriminant on derived type is not allowed in SPARK (SPARK RM 3.7(2))
test.adb:23:04: error: violation of aspect SPARK_Mode at line 1
test.adb:25:25: error: "My_Rec_2" is not allowed in SPARK (due to discriminant on derived type)
test.adb:25:25: error: violation of aspect SPARK_Mode at line 1
test.adb:30:04: warning: analyzing unreferenced procedure "P"
test.adb:32:06: error: "My_Rec_2" is not allowed in SPARK (due to discriminant on derived type)
test.adb:32:06: error: "My_Rec_2" is not allowed in SPARK (due to discriminant on derived type)
test.adb:32:06: error: error in inlined body at line 27
test.adb:32:06: error: violation of aspect SPARK_Mode at line 1
test.adb:32:06: error: violation of aspect SPARK_Mode at line 1
test.adb:32:06: info: analyzing call to "P_Inlined" in context
test.adb:37:04: error: "Write_F_Int_If_B" is not allowed in SPARK (due to attribute "Constrained" on unchecked union prefix)
test.adb:37:04: error: violation of aspect SPARK_Mode at line 1
gnatprove: error during flow analysis and proof
